add seo to prject

--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -132,7 +132,7 @@ import adwokatBanner from '../assets/Kancelaria-Adwokacka-Ewa-Porycka.jpg';
     margin-top: 0;
     width: 100%;
     max-width: 600px;
-    margin-left: auto;
+    margin-left: 0;
     margin-right: auto;
 }
 
