fix header detail and uniform form color.

--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -156,7 +156,7 @@ import adwokatBanner from '../assets/Kancelaria-Adwokacka-Ewa-Porycka.jpg';
 }
 
 .required {
-    color: rgb(217, 159, 59);
+    color: #b1976b;
     margin-left: 4px;
 }
 
@@ -185,7 +185,7 @@ import adwokatBanner from '../assets/Kancelaria-Adwokacka-Ewa-Porycka.jpg';
 }
 
 .submit-button {
-    background-color: rgb(217, 159, 59);
+    background-color: #b1976b;
     color: #000000;
     border: none;
     padding: 12px 24px;
