--- a/src/components/TextRowsSection.astro
+++ b/src/components/TextRowsSection.astro
@@ -118,7 +118,7 @@ import BackgroundImage from '../assets/background-librabry.jpg';
 .text-row-heading {
     font-size: 1.25rem;
     font-weight: 600;
-    color: rgb(217, 159, 59);
+    color: #b1976b;
     margin-bottom: 0.5rem;
 }
 
