--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -49,12 +49,11 @@ import adwokatBanner from '../assets/Kancelaria-Adwokacka-Ewa-Porycka.jpg';
     .banner {
         position: relative;
         width: 100%;
-        max-height: calc(750px - 93px);
+        max-height: calc(650px - 93px);
         height: calc(100vh - 93px);
         overflow: hidden;
         background-color: #000;
-        margin-top: 0;
-        
+        margin-top: 93px;
     }
     
     .banner-content {
@@ -62,8 +61,7 @@ import adwokatBanner from '../assets/Kancelaria-Adwokacka-Ewa-Porycka.jpg';
         width: 100%;
         height: 100%;
         display: flex;
-        z-index: 2;
-        
+        z-index: 1;
     }
     
     .container {
