--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -53,7 +53,7 @@ import adwokatBanner from '../assets/Kancelaria-Adwokacka-Ewa-Porycka.jpg';
         height: calc(100vh - 93px);
         overflow: hidden;
         background-color: #000;
-        margin-top: 93px;
+       
     }
     
     .banner-content {
@@ -74,7 +74,7 @@ import adwokatBanner from '../assets/Kancelaria-Adwokacka-Ewa-Porycka.jpg';
     .info-section {
         position: relative;
         color: #fff;
-        padding: 3rem;
+        padding: 5rem;
         padding-left: 0rem;
         display: flex;
         flex-direction: column;
@@ -82,6 +82,7 @@ import adwokatBanner from '../assets/Kancelaria-Adwokacka-Ewa-Porycka.jpg';
         align-items: flex-start;
         z-index: 3;
         width: 50%;
+        padding-bottom: 0;
     }
     
     .info-content {
