redesign mobile version

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -182,7 +182,8 @@ import adwokatBanner from '../assets/Kancelaria-Adwokacka-Ewa-Porycka.jpg';
             background-color: rgba(0, 0, 0, 0.7);
             align-items: flex-start;
             text-align: left;
-            padding-left: 1rem;
+            padding: 1rem;
+            padding-top: 2rem;
         }
     }
 </style>
