--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -35,6 +35,13 @@ import adwokatLogo from '../assets/AdwokaturaPolska-Ewa-Porycka.svg';
             transform: translateX(-10px);
         }
     }
+
+    @media (max-width: 768px) {
+        img.logo {
+            height: auto!important;
+            padding-left: 10px;
+        }
+    }
 </style>
 
 
